# base64

./: .gitignore  CMakeLists.txt
cmake/: SniperC++17.cmake  SniperC_CXX_FLAGS.cmake
include/: libbase64.h
lib/: codec_choose.c  codecs.h  config.h  lib.c  table_generator_2.c  tables_2.h
lib/arch/avx/: codec.c
lib/arch/avx2/: codec.c  dec_loop_2.c  enc_loop_2.c
lib/arch/sse41/: codec.c
lib/arch/sse42/: codec.c  dec_loop_2.c
lib/arch/ssse3/: codec.c  dec_loop_2.c  enc_loop_2.c  enc_translate_2.c
unittest/: Base64Test.cpp
